# elsametric-api

./: .dockerignore  .gitignore  Dockerfile  Pipfile  api_queries.py  db.Dockerfile  db_restore.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
elsaserver/: __init__.py  definitions.py  helpers.py
elsaserver/api/: get_author_info.py  get_author_jmetrics.py  get_author_keywords.py  get_author_network.py  get_author_papers.py  get_author_papers_co_id.py  get_author_papers_jmetric.py  get_author_papers_keyword.py  get_author_papers_year.py  get_author_stats.py  get_author_trend.py  get_authors_list.py  get_authors_rank.py  get_institution_authors.py
