[tool.poetry]
name = "elsaserver"
version = "0.1.0"
description = "Creates the webserver for elsametric"
authors = ["Pooria Soltani <pooria.ms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.65.2"
uvicorn = "^0.10.8"
sqlalchemy = "^1.3"
mysql-connector-python = "^8.0"
sqlalchemy-utils = "^0.35.0"
psycopg2 = "^2.8"
environs = "^6.1"
elsametric = { git = "https://github.com/pmsoltani/elsametric.git", branch = "dev" }

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
vermin = "^0.8.2"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
